--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -22,7 +22,7 @@
   - :who: 
     :why: 
     :versions: []
-    :when: 2022-01-28
+    :when: 2022-01-28 15:27:29.688403000 Z
 - - :permit
   - BSD License 3
   - :who: 
@@ -47,14 +47,14 @@
     :why: 
     :versions:
     - 1.2.11
-    :when: 2022-01-28
+    :when: 2022-01-28 15:27:29.688403000 Z
 - - :approve
   - logback-classic
   - :who: 
     :why: 
     :versions:
     - 1.2.11
-    :when: 2022-01-28
+    :when: 2022-01-28 15:27:29.688403000 Z
 - - :approve
   - jakarta.xml.bind-api
   - :who: 
