--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -60,10 +60,15 @@ spec:
       hostPath:
         path: /tmp/trivycache/
     - name: jenkins-docker-cfg
-      projected:
-        sources:
-          - secret:
-              name: regcred
-              items:
-                - key: .dockerconfigjson
-                  path: config.json
+      secret:
+          secretName: regcred
+          items:
+          - key: .dockerconfigjson
+            path: config.json    
+      # projected:
+      #   sources:
+      #     - secret:
+      #         name: regcred
+      #         items:
+      #           - key: .dockerconfigjson
+      #             path: config.json
